1999-05-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-cal.c (gnome_calendar_set_view): Add some assertions here,
	to pin point the bug reported on gnome-list.

	* calobj.c (load_recurrence): Make intervals always exist.  a 0
	interval is wrong.

1999-05-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* year-view.c: Removed unused macro CALENDAR_HEIGHT.

1999-05-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* year-view.c (idle_handler): Set the canvas scroll region here,
	not in size_allocate().  Also, use the correct width and height
	based on the allocation and the precomputed minimum width/height
	values.

	* gnome-cal.c (setup_widgets): Set the scrollbar policy of the
	scrolled window.

	* main.c (setup_appbar): Use the correct type for the appbar.

	* gncal-day-view.c: Removed unused function switch_to_day().

	* gncal-day-panel.c (calendar_day_selected): Removed unused variable.

1999-05-25  Nat Friedman  <nat@nat.org>

	* doc/C/gnomecal.sgml: Fixed a typo.

	* gnome-cal.c (setup_widgets): Added a scrolled window widget into
 	which the year view is placed.

	* year-view.c (CALENDAR_HEIGHT): The height of the total year view
 	inside the scrolled window.
	(idle_handler): Set the height of the year view to
 	CALENDAR_HEIGHT.
	(year_view_size_allocate): Set the scroll region of the year view
 	canvas to allocation->width, CALENDAR_HEIGHT.

1999-04-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c (dump_todo): Add --todo flag to dump the todo contents.

1999-04-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-todo.c (add_activated): Use same hack used in edit_activated

1999-04-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-todo.c (edit_activated): Kill all grabs from the CList
	before running the new dialog box.  

	This fixes the problem of button-3/Edit on the todo item blocking
	the GUI (actually, the main window responds, but not the todo
	window). 

1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>
