@@ -1,5 +1,8 @@
 1999-05-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
+	* main.c (parse_an_arg): Added missing break here.  It was causing
+	core dumps when invoked with --userfile.
+
 	* gnome-cal.c (gnome_calendar_set_view): Add some assertions here,
 	to pin point the bug reported on gnome-list.
 
